examples/tests/invalid/bring_local_self.w
bring "./bring_local_self.w" as foo;
// ^ error: Cannot bring a module into itself
